fix: update ::-webkit-scrollbar

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -55,10 +55,9 @@
 }
 
 .section-sidebar {
-  position: sticky;
   top: 12rem;
   height: calc(100vh - 12rem);
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
 
@@ -75,17 +74,21 @@
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background: $light;
+    background: #ddd;
   }
 }
 
 .section-sidebar:hover {
   scrollbar-width: thin;
   scrollbar-color: $light transparent;
+}
 
-  &::-webkit-scrollbar-thumb {
-    background: $light;
-  }
+.section-sidebar:hover::-webkit-scrollbar-thumb {
+  background: $light;
+}
+
+.section-sidebar:hover::-webkit-scrollbar-thumb:hover {
+  background: #ddd;
 }
 
 .features-list {
